# GT_Graduate_Portfolio

./: README.md
5__Project_Bones/project/: Cargo.toml
5__Project_Bones/project/assets/: settings.json
5__Project_Bones/project/assets/data/levels/: floor_1.ldtk
5__Project_Bones/project/assets/visual/: 2high_props.aseprite  NPCS.ase  barstool.aseprite  doors.aseprite  floor.aseprite  magic_mirror.aseprite  props.aseprite  rocks.aseprite  special_autotile.aseprite  stone-counter.aseprite  todo.md  walls.ase  wisps.aseprite
5__Project_Bones/project/src/: components_events.rs  lib.rs  main.rs  movement.rs  settings.rs  setup.rs  systems.rs
