[package]
name = "project_bones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_ecs_ldtk = "0.4.0"
bevy_rapier2d = "0.18.0"
leafwing-input-manager = "0.6.1"
rand = "0.8.5"
serde = "1.0.151"
serde_json = "1.0.91"
